fix line bug in itinerary, spacing the li

--- a/index.scss
+++ b/index.scss
@@ -178,6 +178,9 @@ body {
         position: absolute;
         z-index: 100;
         margin-left: 10px;
+        ul li{
+            margin-bottom: 20px;
+        }
     }
 
     .image{
@@ -185,6 +188,7 @@ body {
         background-image: url("./resources/jr_itinerary.png");
         background-size: cover;
         background-position: center;
+        background-repeat: no-repeat;
         width: 100%;
         height: 62vh;
         bottom: 0px;
